--- a/frontend/DockerFile
+++ b/frontend/DockerFile
@@ -1,31 +1,20 @@
-# Stage 1: Build the React app
-FROM node:18-alpine AS build
+FROM node:18-alpine
 
 WORKDIR /app
 
-# Copier les fichiers package.json et package-lock.json
 COPY package*.json ./
-
-# Installer les dépendances
 RUN npm install
 
-# Copier tout le code source
 COPY . .
 
-# Build l'application React pour la production
+# Construire l'app pour production
 RUN npm run build
 
-# Stage 2: Serve with Nginx
-FROM nginx:alpine
+# Installer le serveur "serve"
+RUN npm install -g serve
 
-# Copier le build de React dans le dossier Nginx
-COPY --from=build /app/build /usr/share/nginx/html
+# Exposer le port
+EXPOSE 3000
 
-# Copier la configuration Nginx personnalisée (si nécessaire)
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Exposer le port 80
-EXPOSE 80
-
-# Démarrer Nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Servir l'app
+CMD ["serve", "-s", "build", "-l", "3000"]
