--- a/frontend/DockerFile
+++ b/frontend/DockerFile
@@ -1,20 +1,17 @@
-FROM node:18-alpine
-
+# Étape 1 : Build de l'application React
+FROM node:18-alpine AS build
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install
-
 COPY . .
-
-# Construire l'app pour production
 RUN npm run build
 
-# Installer le serveur "serve"
-RUN npm install -g serve
-
-# Exposer le port
-EXPOSE 3000
-
-# Servir l'app
-CMD ["serve", "-s", "build", "-l", "3000"]
+# Étape 2 : Servir l'application avec Nginx
+FROM nginx:alpine
+RUN rm /etc/nginx/conf.d/default.conf
+# Assurez-vous que le chemin /app/build est correct pour votre projet React
+COPY --from=build /app/build /usr/share/nginx/html 
+# Assurez-vous que ce fichier existe bien dans le dossier frontend/
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
