--- a/K8s/mongo-secret.yaml
+++ b/K8s/mongo-secret.yaml
@@ -6,4 +6,4 @@ type: Opaque
 data:
   #mongo-user: bm91aGFpbGE=
   #mongo-password: bm91aGExMjM=
-  #MONGO_URI: bW9uZ29kYitzcnY6Ly9ub3VoYWlsYTpub3VoYTEyM0BjbHVzdGVyMC5xcXVzZC5tb25nb2RiLm5ldC9LOD9yZXRyeVdyaXRlcz10cnVlJnc9bWFqb3JpdHk=
+  MONGO_URI: bW9uZ29kYitzcnY6Ly9ub3VoYWlsYTpub3VoYTEyM0BjbHVzdGVyMC5xcXVzZC5tb25nb2RiLm5ldC9LOD9yZXRyeVdyaXRlcz10cnVlJnc9bWFqb3JpdHk=
