--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,18 +1,25 @@
 server {
     listen 80;
-    
-    # 🚨 Point de contrôle n°1 : La redirection vers le backend
+  # 🚨 Point de contrôle n°1 : La redirection vers le backend
+    # 🔁 Redirection vers le backend (service Kubernetes)
     location /api {
-        # 'backend' est le nom du service DANS docker-compose
-        proxy_pass http://backend:5000; 
-        # ... (autres headers Nginx)
+      # 'backend' est le nom du service DANS docker-compose
+      #  proxy_pass http://backend:5000; 
+      # 'backend-service' est le nom du service DANS k8s
+        proxy_pass http://backend-service:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # 🚨 Point de contrôle n°2 : Le service des fichiers statiques
+    # 🌐 Fichiers statiques React
     location / {
         root /usr/share/nginx/html;
         index index.html;
         # Essentiel pour le routing React (History API)
-        try_files $uri $uri/ /index.html; 
+        try_files $uri $uri/ /index.html;
     }
 }
