--- a/frontend/DockerFile
+++ b/frontend/DockerFile
@@ -8,10 +8,18 @@ RUN npm run build
 
 # Étape 2 : Servir l'application avec Nginx
 FROM nginx:alpine
+
+# ⚠️ On supprime la conf par défaut de Nginx
 RUN rm /etc/nginx/conf.d/default.conf
-# Assurez-vous que le chemin /app/build est correct pour votre projet React
-COPY --from=build /app/build /usr/share/nginx/html 
-# Assurez-vous que ce fichier existe bien dans le dossier frontend/
+
+# ✅ On copie les fichiers buildés
+COPY --from=build /app/build /usr/share/nginx/html
+
+# ✅ On copie ta configuration Nginx personnalisée
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Exposition du port 80
 EXPOSE 80
+
+# Démarrage de Nginx
 CMD ["nginx", "-g", "daemon off;"]
