--- a/K8s/ingress-template.yaml
+++ b/K8s/ingress-template.yaml
@@ -1,28 +1,30 @@
-# 🌐 INGRESS FINAL AVEC HÔTE
+# ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: fullstack-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx" 
+    kubernetes.io/ingress.class: "nginx"
 spec:
+  tls:
+  - hosts:
+      - mern-tasks.com
+    secretName: mern-tasks-tls
   rules:
-  - host: mern-tasks.com # 👈 NOUVEAU : Le nom de domaine complet
+  - host: mern-tasks.com
     http:
       paths:
-      # 1. Règle pour l'API Backend
       - path: /api/tasks
         pathType: Prefix
         backend:
           service:
             name: backend-service
             port:
-              number: 5000         
-      # 2. Règle par défaut pour le Frontend
+              number: 5000
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: frontend-service 
+            name: frontend-service
             port:
               number: 80
