--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -24,14 +24,14 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: Backend/package-lock.json
       
       - name: Install dependencies
-        working-directory: ./backend
+        working-directory: ./Backend
         run: npm ci
       
       - name: Run linter
-        working-directory: ./backend
+        working-directory: ./Backend
         run: npm run lint || echo "No lint script"
       
       - name: Run tests
