--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm run lint || echo "No lint script"
       
       - name: Run tests
-        working-directory: ./backend
+        working-directory: ./Backend
         run: npm test || echo "No tests yet"
 
   build-and-push:
@@ -72,7 +72,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ./backend
+          context: ./Backend
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
@@ -137,5 +137,5 @@ jobs:
         run: echo "✅ Deployment successful!"
       
       - name: Notify failure
-        if: ${{ needs.deploy.result == 'failure' }}
+        if: ${{ needs.deploy.result != 'success' }}
         run: echo "❌ Deployment failed!"
