--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -8,7 +8,7 @@ on:
       - '.github/workflows/backend-ci-cd.yml'
 
 env:
-  DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/k8sfullstackapp_end_to_end-backend
+  DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE_FULL }}
   KUBERNETES_NAMESPACE: default
 
 jobs:
