--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -80,54 +80,55 @@ jobs:
           build-args: |
             NODE_ENV=production
 
-  deploy:
-    name: Deploy to Kubernetes
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # deploy:
+  #   name: Deploy to Kubernetes
+  #   needs: build-and-push
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/main'
+  #   
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+  #     
+  #     - name: Setup kubectl
+  #       uses: azure/setup-kubectl@v3
+  #       with:
+  #         version: 'latest'
+  #     
+  #     - name: Configure kubectl
+  #       run: |
+  #         mkdir -p $HOME/.kube
+  #         echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $HOME/.kube/config
+  #     
+  #     - name: Update deployment image
+  #       run: |
+  #         IMAGE_TAG="${{ needs.build-and-push.outputs.image-tag }}"
+  #         echo "Deploying image tag: ${IMAGE_TAG}"
+  #         kubectl set image deployment/backend-deployment \
+  #           backend=${{ env.DOCKER_IMAGE }}:${IMAGE_TAG} \
+  #           -n ${{ env.KUBERNETES_NAMESPACE }}
+  #     
+  #     - name: Wait for rollout
+  #       run: |
+  #         kubectl rollout status deployment/backend-deployment \
+  #           -n ${{ env.KUBERNETES_NAMESPACE }} \
+  #           --timeout=5m
+
       
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'latest'
+  #   - name: Verify deployment
+   #      run: |
+     #      kubectl get pods -n ${{ env.KUBERNETES_NAMESPACE }} -l app=backend
       
-      - name: Configure kubectl
-        run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $HOME/.kube/config
-      
-      - name: Update deployment image
-        run: |
-          IMAGE_TAG="${{ needs.build-and-push.outputs.image-tag }}"
-          echo "Deploying image tag: ${IMAGE_TAG}"
-          kubectl set image deployment/backend-deployment \
-            backend=${{ env.DOCKER_IMAGE }}:${IMAGE_TAG} \
-            -n ${{ env.KUBERNETES_NAMESPACE }}
-      
-      - name: Wait for rollout
-        run: |
-          kubectl rollout status deployment/backend-deployment \
-            -n ${{ env.KUBERNETES_NAMESPACE }} \
-            --timeout=5m
-      
-      - name: Verify deployment
-        run: |
-          kubectl get pods -n ${{ env.KUBERNETES_NAMESPACE }} -l app=backend
-      
-      - name: Rollback on failure
-        if: failure()
-        run: |
-          kubectl rollout undo deployment/backend-deployment \
-            -n ${{ env.KUBERNETES_NAMESPACE }}
-          echo "⚠️ Deployment failed, rolled back to previous version"
+     #  - name: Rollback on failure
+      #   if: failure()
+      #   run: |
+      #     kubectl rollout undo deployment/backend-deployment \
+       #      -n ${{ env.KUBERNETES_NAMESPACE }}
+        #   echo "⚠️ Deployment failed, rolled back to previous version"
 
   notify:
     name: Send Notification
-    needs: [test, build-and-push, deploy]
+    needs: [test, build-and-push]
     runs-on: ubuntu-latest
     if: always()
     
